--- a/src/Todo.txt
+++ b/src/Todo.txt
@@ -6,11 +6,12 @@ Snooping application:
 leave the CLI one as it is for now. we can refactor the CLI module
 to use the new UART handler if required.
 
-- [ ] Write a test app to use the SD card device w/SPI
+- [...] Write a test app to use the SD card device w/SPI
 - [ ] Write circular buffer module
 - [ ] Write UART interface which uses HAL uart with interrupt
 where it pushes to circular buffer each interrupt (turn off interrupts here?)
-- [ ] And when read, it will pop
+- [ ] And when read, it will pop 
+- [ ] OR, the circular buffer will be handled by the DMA?
 
 Baud rate / Application Decider
 - [ ] Make use of the blinky module, remove the adapters, make tests work
@@ -18,3 +19,6 @@ Baud rate / Application Decider
 
 Possible Refactorings:
 - [ ] The CLI to use the same UART module with circular buffer?
+
+Future:
+- [ ] Add small OLED(?) screen
