--- a/src/Todo.txt
+++ b/src/Todo.txt
@@ -1,25 +1,23 @@
 ---
 
-Data logger:
+# Data logger:
 
 - [ ] Perhaps write a new UART handler module,
 leave the CLI one as it is for now. we can refactor the CLI module
 to use the new UART handler if required.
 
+SD card:
 - [blocked] Write a test app to use the SD card device w/SPI
-- [ ] Write circular buffer module
-- [ ] Write UART interface which uses HAL uart with interrupt
-where it pushes to circular buffer each interrupt (turn off interrupts here?)
-- [ ] And when read, it will pop 
-- [ ] OR, the circular buffer will be handled by the DMA?
+- [ ] Write a UART module with DMA that continuously 
+writes to the circular buffer will be handled by the DMA.
 
 Baud rate / Application Decider
 - [...] Make use of the blinky module, remove the adapters, make tests work
-    - [ ] Mock the "system" HAL and eventually remove "system_hal.h/c"
+    - [x] Mock the "system" HAL and eventually remove "system_hal.h/c"
     - [ ] Re-develop the "gpio_interrupts" module via TDD.
 - [ ] Rewrite the button module so it is a DIP switch module instead
 
-Possible Refactorings:
+Possible Refactors:
 - [ ] The CLI to use the same UART module with circular buffer?
 
 Files:
