--- a/Todo.txt
+++ b/Todo.txt
@@ -27,6 +27,11 @@ Baud rate / Application Decider
     - [ ] Re-develop the "gpio_interrupts" module via TDD (currently not done with TDD)
 - [x] Create a 4-way DIP switch module
 
+Snooping application
+- [ ] When receiving, toggle the LED
+- [ ] Receive to a buffer (dma?) and write to SD card buffer? 
+- [ ] Timestamp each line (\n) of message
+
 Possible Refactors:
 - [ ] The CLI to use the same UART module with circular buffer?
 
