fix: reduce heap size and circ buf size
The stack was overflowing out of the SRAM region

--- a/Todo.txt
+++ b/Todo.txt
@@ -45,6 +45,7 @@ Realtime clock:
 
 Misc:
 - [ ] Add versioning which displays on UART
+- [ ] Increase the length of command entered (40 characters?)
 
 Future:
 - [ ] Add small OLED(?) screen
