feat: do tdd for serial snooper app and more...
- uart irq just saves incoming data to circular buffer, doesnt do any
  processing
- the processing is done by the serial snooper app, i.e. add timestamp
- the MySD module now controls LED too
- serial snooper shall flush the sd card every 500 ms
- !! the serial snooper tests need to be refactored. !!

--- a/Todo.txt
+++ b/Todo.txt
@@ -20,6 +20,7 @@ SD card:
 - [x] Add SD card functions to the CLI
 - [ ] Write a UART module with DMA that continuously 
 writes to the circular buffer which will be handled by the DMA.
+- [ ] Make ffconf smaller
 
 Baud rate / Application Decider
 - [x] Make use of the blinky module, remove the adapters, make tests work
