feat: data holder returns file size

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,63 +1,5 @@
 ---
 
-# Data Logger Tasks:
+# Data Logger++ Tasks:
 
-- [x] Perhaps write a new UART handler module,
-leave the CLI one as it is for now. we can refactor the CLI module
-to use the new UART handler if required.
-
-CLI:
-- [x] Print a welcome message at start which tells users how to navigate
-    - [ ] Build the welcome message using variables in modules
-- [ ] Refactor the string manipulation for the "MyProcessor" module
-- [ ] Handle malicious input - add a \0 to the incoming strings to limit size
-
-SD card:
-- [x] Write a test app to use the SD card device w/SPI
-    - [x] Try another SD card breakout
-        - [-] Try on an Ardunio
-- [x] Treat the SD driver as a black box and add it to our current system.
-- [x] Add SD card functions to the CLI
-writes to the circular buffer which will be handled by the DMA.
-- [x] Make fatfs smaller via ffconf configs
-- [x] Don't light LED if fatfs init fails
-
-Baud rate / Application Decider
-- [x] Make use of the blinky module, remove the adapters, make tests work
-    - [x] Mock the "system" HAL and eventually remove "system_hal.h/c"
-    - [ ] Re-develop the "gpio_interrupts" module via TDD (currently not done with TDD)
-- [x] Create a 4-way DIP switch module
-- [!] Make DIP switch decide baud rate
-    - [ ] Make it on the fly?
-- [ ] Check that all baud rate settings work as expected
-
-Snooping application
-- [x] Write UART library using STM32 HAL,
-    - [x] Experiment with it. Make it use DMA and fill RAM? | Use interrupt
-- [x] When receiving, toggle the LED
-- [x] Timestamp each line (\n) of message
-
-Possible Refactors:
-- [ ] The CLI to use the same UART module with circular buffer?
-
-Files / folders:
-- [ ] Tidy file / folder structure in Keil and in the src folder
-- [ ] Rename modules (MySM is no longer a state machine, and DIP module uses both Dip and DIP )
-
-Misc:
-- [ ] Add versioning which displays on UART
-- [ ] Increase the length of command entered? (40 characters?)
-- [ ] Test fast UART input (we may need to increase size)
-- [ ] Optimise RAM usage (bss, data)
-
-Realtime clock:
-- [x] Think about abstraction and layers
-    - [x] RTC module with I2C
-    - [x] A string manip module on top of that
-- [x] Add RTC to the fatfs module so files get right date when opened
-- [x] Update the filenames
-- [x] Fix the seconds bug
-- [ ] Add ability for milliseconds
-
-Future:
-- [ ] Add small OLED(?) screen
+- [ ] Variable names (namely make MVC pattern more obvious)
