fix: remove unnecessary context passing to DataHolder module (need to update rest of system now)

--- a/Todo.txt
+++ b/Todo.txt
@@ -3,3 +3,7 @@
 # Data Logger++ Tasks:
 
 - [ ] Variable names (namely make MVC pattern more obvious)
+- [ ] Reduce size of program
+- [ ] Do not read circ buf if it's empty
+- [ ] Remove context argument from data holder, it doesn't need it
+    - [ ] Remove refresh too. and give data if/when requested
