migrate to stm32f303k8 from stm32f031k6
compiles but not tested on target.

- updated files
- change i2c1 pins from pa9,10 to pb6,7
- change usart from usart1 to usart2 and update alt function value
- update spi1 alt func value
- remove PREDIV assignment in RCC typedef as new driver doesnt have it

--- a/Todo.txt
+++ b/Todo.txt
@@ -3,7 +3,15 @@
 # Data Logger++ Tasks:
 
 - [ ] Variable names (namely make MVC pattern more obvious)
-- [ ] Reduce size of program
+- [x] Reduce size of program
 - [x] Do not read circ buf if it's empty
 - [x] Remove context argument from data holder, it doesn't need it
     - [x] Remove refresh too. and give data if/when requested
+- [ ] Upgrade uC so we can increase size of buffers
+- [ ] Understand fatfs better; it seems to buffer internally, 
+    so perhaps writing 1 byte at a time is OK for performance
+- [ ] Upgrade processor to one with more RAM.
+    - Turn off FF_FS_TINY
+    - Update SPI speed if possible
+    - Increase circular buffer size
+
