--- a/Todo.txt
+++ b/Todo.txt
@@ -8,25 +8,31 @@
 - [x] Remove context argument from data holder, it doesn't need it
     - [x] Remove refresh too. and give data if/when requested
 - [x] Upgrade uC so we can increase size of buffers
-- [ ] Understand fatfs better; it seems to buffer internally, 
+- [x] Understand fatfs better; it seems to buffer internally, 
     so perhaps writing 1 byte at a time is OK for performance
-- [ ] Upgrade processor to one with more RAM.
+    - Benchmark shows the more we write, the faster the throughput.
+- [...] Upgrade processor to one with more RAM.
     - [x] Update processor speed
     - [x] Update SPI speed
     - [x] Increase circular buffer size
-    - [ ] Update I2C wiring (PB7 SDA, PB6 SCL, AF4)
-        - [ ] Remove the solder bridge SB16 else I2C and SPI will clash.
-    - [ ] Remove solder bridge to allow the device to be plugged into the wall
+    - [!] Update I2C wiring (PB7 SDA, PB6 SCL, AF4)
+        - [!] Remove the solder bridge SB16 else I2C and SPI will clash.
+    - [!] Remove solder bridge to allow the device to be plugged into the wall
     - [x] Update USART (usart1 -> usart2, new alt func)
     - [x] Check SD card library works
-    - [ ] Write a benchmarking test for the SD card - what is the write throughput?
+    - [x] Write a benchmarking test for the SD card - what is the write throughput?
         - Sending 1 byte per loop, vs 512, vs 1024, 2048, vs 4096
         - Turn off FF_FS_TINY?
         - Try higher SPI speed
         - Run the test a few times, perhaps 5 times each and get an average
     - [-] Use internal RTC | No VBAT on this particular chip (LQFP32)
         See page 31 LQFP32 pinout of STM32F303x6/x8 Datasheet for this info.
-    - [ ] Research baud rate detection
+    - [x] Research baud rate detection
+        - STM32F0, STM32F3 both have this feature
+        - However, it requires the master device to send known bytes at the start.
+        - Another way could be to wire RX line to a timer pin 
+            with input capture. Take X measurements. 
+            Smallest will likely be baud rate.
     - [ ] Research the 4Kb of CCM RAM we have on this chip.
 - [x] Update tests so they pass again with this new chip
 - [x] Test circular buffer capacity that is not a power of 2 to make it as large as possible.
