--- a/Todo.txt
+++ b/Todo.txt
@@ -83,6 +83,11 @@ New in V3:
     - Max files
     - File circular buffer (oldest file gets re-written)
 - [ ] Auto-baud rate detection
+    - Do this but fake the hardware dependency as I understand it
+    - The technique is to connect uart input to a timer and interrupt on an edge
+    - Look for the smallest time between the interrupts
+        - to make it noise-proof, take a tally of these over a short period of time
+    - this time will be the period
 
 ***************************************************************************************************************************************************
 
