feat: auto baud rate (sw seemingly ready but hw not working)
- add new abstractions: MyUART, autobaudrate, MyTimer
- add fakes for the HW dependent abstractions (MyUART and MyTimer)
- add tests to ensure autobaudrate works based on an input capture
- add tests to MyApp to ensure UART is configured with the correct baud
  rate

 all tests passing however HW tests show that the timer isn't
 triggering.

--- a/Todo.txt
+++ b/Todo.txt
@@ -75,7 +75,7 @@ New in V3:
     - What to do when the maximum log files is reached - shall be handled by error handling.
     - What happens if SD card contains too many files already, is full, or has files with our naming conventions?
 
-- [ ] Continue writing to the same file even after a power cycle
+- [x] Continue writing to the same file even after a power cycle
     - This gives the serial snooper a more predictable behaviour
     - Reduces likelihood of creating too many files on the SD card which may cause issues when reading it from a PC
     - [ ] Add system to retain information after power cycling and load this information on start-up.
