--- a/Todo.txt
+++ b/Todo.txt
@@ -82,7 +82,7 @@ New in V3:
 - [ ] Add ability to configure the Serial Snooper via a config file on the SD card.
     - Max files
     - File circular buffer (oldest file gets re-written)
-- [ ] Auto-baud rate detection
+- [x] Auto-baud rate detection
     - Do this but fake the hardware dependency as I understand it
     - The technique is to connect uart input to a timer and interrupt on an edge
     - Look for the smallest time between the interrupts
